# secureshop-ecommerce

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .eslintrc.json  Dockerfile  Makefile  alembic.ini  package-lock.json  package.json  pyproject.toml  tsconfig.json
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  auth.py  cart.py  health.py  orders.py  products.py
backend/app/core/: __init__.py  config.py  logging.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/middleware/: __init__.py  request_logging.py  security_headers.py
backend/app/models/: __init__.py  cart.py  order.py  product.py  refresh_token.py  user.py
backend/app/schemas/: __init__.py  auth.py  common.py  order.py  product.py
backend/app/services/: __init__.py  auth_service.py
backend/prisma/: schema.prisma
backend/src/: server.ts
backend/src/config/: security.config.ts
backend/src/controllers/: auth.controller.ts  product.controller.ts
backend/src/middleware/: auth.middleware.ts  error.middleware.ts
backend/src/routes/: auth.routes.ts  cart.routes.ts  order.routes.ts  product.routes.ts  user.routes.ts
backend/src/utils/: encryption.ts  logger.ts  prisma.ts  redis.ts
backend/src/validators/: schemas.ts
backend/tests/: conftest.py  test_auth_schemas.py  test_config.py  test_security.py
docs/: SECURITY.md
frontend/: .dockerignore  .eslintrc.json  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/context/: AuthContext.tsx  CartContext.tsx
frontend/src/pages/: AccountPage.tsx  CartPage.tsx  CheckoutPage.tsx  HomePage.tsx  LoginPage.tsx  NotFoundPage.tsx  OrdersPage.tsx  ProductDetailPage.tsx  ProductsPage.tsx  RegisterPage.tsx  SkillsPage.tsx  index.ts
frontend/src/styles/: globals.css
frontend/src/utils/: api.ts
(+6 files in other folders)
